--- a/src/views/genres.html
+++ b/src/views/genres.html
@@ -58,7 +58,7 @@
                     </tr>
                     <tr class="table-dark">
                         <td><span>Education</span></td>
-                        <td><span>Fiction</span></td>
+                        <td><span>Prose</span></td>
                         <td><span>Health</span></td>
                     </tr>
                     <tr class="table-dark">
@@ -82,7 +82,7 @@
                         <td><span>Romance</span></td>
                     </tr>
                     <tr class="table-dark">
-                        <td><span>Science Fiction</span></td>
+                        <td><span>Physics</span></td>
                         <td><span>Sports</span></td>
                         <td><span>Teens</span></td>
                     </tr>
