--- a/src/views/login.html
+++ b/src/views/login.html
@@ -48,6 +48,9 @@
         <!-- main content of the page -->
         <div class="jumbotron" id="heading">
             <div class="container login-container">
+                <div id="error-container" class="alert alert-dismissible alert-danger in hidden">
+                    <p><strong id="error-message"></strong></p>
+                </div>
                 <div class="row">
                     <div class="col-md-6 login-form-1">
                         <h3>Login</h3>
