no results message added in case of empty response

--- a/src/views/book_information.html
+++ b/src/views/book_information.html
@@ -44,7 +44,11 @@
             </div>
         </nav>
         <!-- The element to which we attach the generated html from the handlebars template -->
-        <div id="book-info" class="card mb-3 jumbotron"></div>
+        <div id="book-info" class="card mb-3 jumbotron">
+            <div id="no-results" class="d-flex justify-content-center">
+                <strong class="hidden">No result found</strong>
+            </div>
+        </div>
     </div>
 
     <!-- The handlebars template which will render the book info -->
