--- a/src/views/book_list.html
+++ b/src/views/book_list.html
@@ -54,6 +54,10 @@
                 <strong class="hidden" id="loading-text">Loading...</strong>
             </div>
 
+            <div id="no-results" class="d-flex justify-content-center">
+                <strong class="hidden">No result found</strong>
+            </div>
+
             <!-- The element to which the compiled handlebars template is attached -->
             <div id="book-list" class="list-group"></div>
         </div>
